# audit-github-account

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: auth.rs  error.rs  github.rs  handlers.rs  main.rs  middleware.rs  models.rs  utils.rs
templates/: dashboard.html  index.html
