[package]
name = "learning-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12"
axum = { version = "0.8", features = ["json", "macros"] }
axum-extra = { version = "0.10", features = ["cookie-private"] }
base64 = "0.22"
futures = "0.3"
http = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
